# ArgumentParser

./: CMakeLists.txt  README.md
includes/: argument_parser.h
src/: argument_parser.c
tests/full_test/: tester.c
tests/unit_test/: argument_component.c
